--- a/server/composer.json
+++ b/server/composer.json
@@ -10,8 +10,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "cloudinary-labs/cloudinary-laravel": "^3.0",
+        "firebase/php-jwt": "^6.11",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.10.1",
+        "lcobucci/clock": "^3.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
