--- a/server/composer.json
+++ b/server/composer.json
@@ -14,6 +14,7 @@
         "firebase/php-jwt": "^6.11",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
         "lcobucci/clock": "^3.3"
     },
