Update env file name

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -6,7 +6,7 @@ services:
       context: ./server
       dockerfile: Dockerfile.development
     env_file:
-      - ./server/.env
+      - ./server/.env.development
     ports:
       - "3000:3000"
     depends_on:
