--- a/server/Dockerfile.production
+++ b/server/Dockerfile.production
@@ -3,11 +3,10 @@ FROM php:8.4-fpm-alpine
 WORKDIR /var/www/html
 
 RUN apk add --no-cache \
-    git \
     curl \
     libzip-dev \
     zlib-dev \
-    postgresql-dev \
+    postgresql-dev 
 
 RUN docker-php-ext-install \
     pdo \
