Update development environment configuration and dependencies; adjust ports and remove unused files

--- a/server/Dockerfile.development
+++ b/server/Dockerfile.development
@@ -2,27 +2,15 @@ FROM php:8.4-fpm-alpine
 
 WORKDIR /var/www/html
 
-RUN apk add --no-cache \
-    curl \
-    libzip-dev \
-    zlib-dev \
-    postgresql-dev
+RUN apk add --no-cache libzip-dev postgresql-dev \
+    && docker-php-ext-install pdo_pgsql zip
 
-RUN docker-php-ext-install \
-    pdo \
-    pdo_pgsql \
-    zip
-
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 COPY composer.json composer.lock ./
-
-RUN composer install --no-scripts --no-autoloader
+RUN composer install --no-scripts --no-autoloader --no-dev
 
 COPY . .
+RUN composer dump-autoload --optimize --no-scripts
 
-RUN composer dump-autoload
-
-EXPOSE 3000
-
-CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=3000"]
+CMD ["php", "artisan", "serve", "--host=0.0.0.0"]
