--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -6,15 +6,14 @@ services:
       context: ./server
       dockerfile: Dockerfile.development
     env_file:
-      - ./server/.env.development
+      - ./server/.env
     ports:
-      - "3000:3000"
+      - "8000:8000"
     depends_on:
       - postgres
     restart: always
     volumes:
       - ./server:/var/www/html
-      - /var/www/html/vendor
     networks:
       - public-complaint-app-dev
 
@@ -27,11 +26,10 @@ services:
     env_file:
       - ./client/.env.development
     ports:
-      - "5173:5173"
+      - "3000:3000"
     restart: always
     volumes:
       - ./client:/app
-      - /app/node_modules
     networks:
       - public-complaint-app-dev
 
